# cpp_lab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ItchWebPack.cmake  LICENSE  README.md
.github/actions/butler_install_and_push/: action.yml
.github/actions/deploy_service/: action.yml
.github/workflows/: ubuntu.yml  windows.yml
chat_engine_a/: AppInstance.cpp  AppInstance.h  CMakeLists.txt  ChatManager.cpp  ChatManager.h  ChatServer.cpp  ChatServer.h  ChatServerImpl.h  DataForRendering.h  DebugLog.h  GameWorld.cpp  SceneRenderer.cpp
chat_engine_a/chat_network_lib/: CMakeLists.txt
chat_engine_a/chat_network_lib/include/chat_network/: ChatClient.h  ChatServer.h  Handlers.h
chat_engine_a/chat_network_lib/src/: ChatClient.cpp  ChatConnection.cpp  ChatConnection.h  ChatRoom.cpp  ChatRoom.h  ChatServer.cpp  ChatServerImpl.cpp  ChatServerImpl.h  ClientSession.h  NetworkConnection.cpp  NetworkConnection.h
chat_engine_a/src/: AppInstance.cpp  AppInstance.h  ChatManager.cpp  ChatManager.h  SceneRenderer.cpp  SceneRenderer.h  main.cpp
chat_network_lib/: CMakeLists.txt
chat_network_lib/include/chat_network/: ChatClient.h  ChatServer.h
chat_network_lib/src/: ChatServer.cpp  ClientSession.cpp
debug_log_lib/: CMakeLists.txt
debug_log_lib/include/debug_log/: DebugLog.h
game_engine_b/: AppInstance.cpp  AppInstance.h  CMakeLists.txt  GameDataForRendering.h  GameWorld.cpp  GameWorld.h  GlobalConstants.h  SceneRenderer.cpp  SceneRenderer.h  UserInputData.h  UserInputManger.cpp  UserInputManger.h  main.cpp
game_engine_b/src/: AppInstance.cpp  AppInstance.h  GameDataForRendering.h  GameWorld.h  SceneRenderer.cpp  SceneRenderer.h  UserInputManger.h
network_connection_lib/: CMakeLists.txt
network_connection_lib/include/network_connection/: NetworkConnection.h
network_connection_lib/src/: NetworkConnection.cpp
obsolete/: CMakeLists.txt
obsolete/asio_projects/: CMakeLists.txt
obsolete/asio_projects/chat_engine_a/: CMakeLists.txt
obsolete/asio_projects/chat_engine_a/src/: AppInstance.h  ChatManager.cpp  ChatManager.h
obsolete/asio_projects/chat_network_lib/src/: ChatClient.cpp  ClientSession.h
std/: CMakeLists.txt  main.cpp
std_filesystem/: CMakeLists.txt  main.cpp
transport_layer/: CMakeLists.txt
transport_layer/include/transport_layer/: Transport.h  TransportFactory.h
transport_layer/src/: BrowserWebSocketTransport.cpp  BrowserWebSocketTransport.h  DesktopWebSocketTransport.cpp  DesktopWebSocketTransport.h  TransportFactory.cpp
transport_layer_client/: CMakeLists.txt  main.cpp
web_sockets_echo_server_no_ssl/: CMakeLists.txt  main.cpp
